public/css/sass-modules/_header.scss
body > header {
    border-top: .4em solid $color-accent;
    border-bottom: .4em solid $color-accent;
    box-sizing: border-box;
    height: 4.35rem;

    > .container {
        margin: 0 auto 0;
        color: $color-header;
        position: relative;
        @include clearfix();

        .site {
            &-homeLink {
                display: inline-block;
            }
            &-utilityBar {
                position: relative;

                nav {
                    float: right;
                    margin: 0 0 0 1em;
                }
            }
            &-logo {
                float: left;
                margin: 0 0 0 .5rem;
            }
        }
    }

    @media screen and (min-width: $window-medium) {
        > .container {
            box-sizing: border-box;
            padding-top: .5em;
        }
    }

    @media screen and (min-width: $window-large) {
        > .container {
        }
    }
}

